@startuml
skinparam backgroundColor white
skinparam classFontSize 13
skinparam classAttributeFontSize 12

enum Modalidad {
    PRESENCIAL
    VIRTUAL
}

enum Prioridad {
    BAJA
    MEDIA
    ALTA
}

class Reserva {
    - estudiante: String
    - docente: String
    - fechaHora: LocalDateTime
    - modalidad: Modalidad
    - motivo: String
    - observacion: String
    - prioridad: Prioridad
    - recordatorio: boolean
    - enlace: String
    - duracionMinutos: int
}

class ReservaBuilder {
    + estudiante(valor: String): ReservaBuilder
    + docente(valor: String): ReservaBuilder
    + fechaHora(valor: LocalDateTime): ReservaBuilder
    + modalidad(valor: Modalidad): ReservaBuilder
    + motivo(valor: String): ReservaBuilder
    + observacion(valor: String): ReservaBuilder
    + prioridad(valor: Prioridad): ReservaBuilder
    + recordatorio(valor: boolean): ReservaBuilder
    + enlace(valor: String): ReservaBuilder
    + duracionMinutos(valor: int): ReservaBuilder
    + build(): Reserva
}

ReservaBuilder ..> Reserva : construye
Reserva --> Modalidad
Reserva --> Prioridad

@enduml
